# MATE

./: .gitignore  .gitmodules  CMakeLists.txt  DRIVE-RESEARCH.txt  Dockerfile.base  Dockerfile.basestation  Dockerfile.common  Dockerfile.commonv8-18.04-galactic  Dockerfile.commonv8-20.04-humble  Dockerfile.commonv8.2  Dockerfile.commonv8_3  Dockerfile.commonv8_4  Dockerfile.rov  Dockerfile.x86_64-22.04-humble  JoystickMap.md  LICENSE.txt  README.md  ROV.cpp  THOUGHTS.txt  TODO.txt  _config.yml  docker-compose.yml  libraries.txt  parse.py  requirements.txt  toparse.txt  waterLeak.py  worlds_driverstation_setup.bash
.github/workflows/: ros2_humble_build_and_test.yaml
apps/: CMakeLists.txt  ROV.cpp
docs/: Gemfile  _config.yml  index.html  index.markdown
docs/_posts/: 2022-03-10-welcome-to-jekyll.markdown
docs/base/: base_index.md
docs/rov/: rov_index.markdown
include/: Cameras.hpp  Component.hpp  ContinuousServo.hpp  Drive.hpp  IMU.hpp  Joystick.hpp  Manipulator.hpp  PowerMonitor.hpp  Servo.hpp  ServoBase.hpp  ServoDriver.hpp  TCPClientServer.hpp  Thruster.hpp  Vector3f.hpp
include/components/: CSM_PCA9685.hpp  Component.hpp  Drive.hpp  Manipulator.hpp
include/networking/: TCPClientServer.hpp  UDPClientServer.hpp
launch/: basestation_launch.py  rov_launch.py
scripts/: DriverStation_RunJoystick.py  camcal2.py  test.py  video_publisher.py
setup/: 99-gpio.rules  arm64_build.sh  pass_multimedia_api.sh  ros_entrypoint.sh  ros_entrypoint_common.sh  rov_entrypoint.sh
src/: CMakeLists.txt  Cameras.cpp  Drive.cpp  IMU.cpp  Joystick.cpp  Logger.cpp  Manipulator.cpp  PowerMonitor.cpp  Servo.cpp  ServoDriver.cpp  TCPClientServer.cpp  Thruster.cpp  Vector3f.cpp
src/common/heartbeat/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/common/heartbeat/heartbeat/: heartbeat.py
src/common/heartbeat/src/: listener.cpp  producer.cpp
src/common/heartbeat2/: CMakeLists.txt  package.xml
src/common/heartbeat2/include/: heartbeat_client.hpp  heartbeat_server.hpp
src/common/heartbeat2/src/: client.cpp  heartbeat_client.cpp  heartbeat_server.cpp  server.cpp
src/driverstation/: .clangd  .gitignore  CMakeLists.txt  build.sh  package.xml  run.sh  test_rtsp_from_stream.sh
src/driverstation/driverstation_gui/: CMakeLists.txt  package.xml
src/driverstation/driverstation_gui/assets/: rov.mtl
src/driverstation/driverstation_gui/include/driverstation_gui/: artificial_horizon_ui.hpp  camera_viewport_ui.hpp  config_main.hpp  driverstation_ui.hpp  dynamic_texture.hpp  estop_ui.hpp  horrible_ros_path.hpp  joystick_ui.hpp  modes_util.hpp  orientation_viewport_ui.hpp  read_stream.hpp  ssh_interface.hpp  ssh_ui.hpp  vec_rec_util.hpp
src/driverstation/driverstation_gui/src/: main.cpp
src/driverstation/include/: CMakeLists.txt  artificial_horizon_ui.hpp  camera_viewport_ui.hpp  config_main.hpp  driverstation_ui.hpp  dynamic_texture.hpp  estop.hpp  estop_ui.hpp  ssh_ui.hpp  ui_util.hpp
src/driverstation/joy_config/: joy_left_params.yaml  joy_right_params.yaml  joy_startup.sh
src/driverstation/launch/: driverstation_gui_launch.py
src/driverstation/src/: CMakeLists.txt  main.cpp
src/rov/bar02/: package.xml  setup.cfg  setup.py
src/rov/bar02/bar02/: bar02.py
src/rov/cameras/: CMakeLists.txt  package.xml
src/rov/cameras/include/cameras/: camera_pipeline.hpp
src/rov/cameras/src/: camera_pipeline.cpp  cameras.cpp  main.cpp
src/rov/flight_controller/: CMakeLists.txt  flight_controller  package.xml  setup.cfg  setup.py
src/rov/flight_controller/config/: params.yaml
src/rov/flight_controller/flight_controller/: FlightController.py
src/rov/flight_controller/include/: PID.hpp
src/rov/flight_controller/include/flight_controller/: 40.hpp  Thruster.hpp  controller.hpp  flight_controller.hpp  pid.hpp  rewrite.hpp  thruster_data.hpp
src/rov/flight_controller/launch/: flight_controller.launch.py
src/rov/flight_controller/src/: 40.cpp  PID.cpp  PID.hpp  Thruster.cpp  controller.cpp  flight_controller.cpp  flight_display.cpp  main.cpp  pid.cpp  rewrite.cpp
src/rov/flight_controller/test/: test_p2.cpp  test_simple.cpp
src/rov/manipulator_controller/: CMakeLists.txt  package.xml
src/rov/manipulator_controller/config/: params.yaml
src/rov/manipulator_controller/include/manipulator_controller/: manipulator_controller.hpp
src/rov/manipulator_controller/launch/: manipulator_controller.launch.py
src/rov/manipulator_controller/src/: manipulator_controller.cpp
src/rov/pca9685/: CMakeLists.txt  package.xml
src/rov/pca9685/include/pca9685/: PCA9685_Node.hpp  ServoDriver.hpp
src/rov/pca9685/src/: JHPWMPCA9685.cpp  JHPWMPCA9685.h  PCA9685.cpp  PCA9685_Node.cpp  ServoDriver.cpp  ServoDriver.hpp  main_interactive.cpp
src/rov/rov_cameras/: CMakeLists.txt  package.xml  setup.py
src/rov/rov_cameras/config/: params.yaml
src/rov/rov_cameras/include/: camera_to_file.hpp
src/rov/rov_cameras/include/rov_cameras/: camera_to_file.hpp  cameras.hpp  enumerate_cameras.hpp  h264_camera.hpp  mjpeg_camera.hpp
src/rov/rov_cameras/launch/: rov_cameras_launch.py
src/rov/rov_cameras/rov_cameras/: rov_cameras.py
src/rov/rov_cameras/src/: camera_to_file.cpp  cameras.cpp  h264_camera.cpp  main.cpp  mipi.cpp  mjpeg_camera.cpp  rov_cameras.cpp
src/rov/rov_gpio/: package.xml  setup.cfg  setup.py
src/rov/rov_gpio/rov_gpio/: RovGpio.py
src/rov/rov_launch/: CMakeLists.txt  package.xml
src/rov/rov_launch/config/: vslam_config.yaml
src/rov/rov_launch/launch/: flight_controller_min_test_launch.py  flight_test_launch.py  rov.launch.py  vslam_test.py
src/rov/rov_manipulator_controller/: CMakeLists.txt  package.xml
src/rov/rov_manipulator_controller/config/: params.yaml
src/rov/rov_manipulator_controller/src/: main.cpp  manipulator_controller.cpp
src/rov/rov_pca9685/: CMakeLists.txt  package.xml
src/rov/rov_pca9685/include/pca9685/: PCA9685.hpp  PCA9685_Node.hpp  ServoDriver.hpp
src/rov/rov_pca9685/src/: PCA9685.cpp  PCA9685_Node.cpp  ServoDriver.cpp  main.cpp  main_interactive.cpp
tests/: ServoTest.cpp  ServoTest.hpp  Test.hpp  TestManager.cpp  TestManager.hpp
(+202 files in other folders)
