<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>heartbeat2</name>
  <version>0.0.0</version>
  <description>establish a heartbeat between drivestation and ROV</description>
  <maintainer email="kadin_le@mines.edu">kadin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>csm_common_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>boost/circular_buffer</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
