<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bar02</name>
  <version>0.0.0</version>
  <description>ROS 2 package for MS5837-02BA Blue Robotics Depth Sensor</description>
  <maintainer email="zac71113@gmail.com">Zac Stanton</maintainer>
  <license>TODO: License declaration</license>

  <depend>rov_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
