<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_gpio</name>
  <version>0.0.0</version>
  <description>GPIO Interface for the ROV</description>
  <maintainer email="lucas@birdseyerobotics.com">hermanoid</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>csm_common_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
