<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zac71113@gmail.com">yameat</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rov_interfaces</depend>
  <depend>csm_common_interfaces</depend>
  <depend>heartbeat</depend>

  <depend>bno055</depend>
  <depend>flight_controller</depend>
  <depend>pca9685_node</depend>
  <depend>rov_control</depend>
  <depend>rov_cameras</depend>
  <depend>bar02</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
